Fix style issues on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -208,7 +208,7 @@ header {
   border-radius: var(--border-radius);
   box-shadow: 0px 1px 5px gray;
 
-  padding: 1rem 2.5rem 1rem 2rem;
+  padding: 1rem 1.5rem 1rem 2rem;
   margin: 1rem;
 
   /* height: auto; */
@@ -724,6 +724,8 @@ emoji-picker {
 
   }
 
+
+  /* Task styles */
   .task {
     width: 100%;
   }
@@ -733,11 +735,18 @@ emoji-picker {
     display: none;
   }
   /* In mobile, move date and category down as a column */
-  #task-form-date-category {
-    
+  #task-form-date-category { 
     display: flex;
     flex-direction: column;
     gap: 0;
+  }
+
+  /* In mobile, show these under each other for more horizontal space */
+  .date-category-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 0rem;
   }
 
   /* Move the create button down */
@@ -749,6 +758,19 @@ emoji-picker {
 
   #task-form-section {
     width: 95%;
+  }
+
+  .title {
+    font-size: 1rem;
+
+    margin-bottom: 1rem;
+  }
+
+  .task .status {
+    margin-left: 0rem;
+    margin-right: 1rem;
+
+    /* align-self: start; */
   }
 
   #add-category-modal {
